--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-rows: 60px 1fr;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App header {
+  background-color: #f0f2f5;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  height: 60px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.App header .logo {
+  display: grid;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  grid-template-columns: 60px 1fr;
 }
 
-.App-link {
-  color: #61dafb;
+.App header .logo img {
+  height: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App header .logo h1 {
+  font-size: 15px;
+  margin: 0;
+}
+
+.App header .logo h2 {
+  font-size: 12px;
+  margin: 0;
+  font-weight: 400;
+}
+
+.App header .user {
+  display: flex;
+  flex-direction: row-reverse;
 }
